# openape

./: .gitignore  Cargo.toml  LICENSE  README.md  deno.json
.github/workflows/: ci.yml  npm-publish.yml  publish.yml  test-arm64.yml
npm/: jsr.json.tmpl  package.json.tmpl
npm/app/: jsr.json  package-lock.json  package.json  tsconfig.json
npm/app/src/: index.ts
skills/openape/: SKILL.md
src/: build_npm.ts  config.rs  error.rs  index.ts  logger.rs  main.rs  output.rs  utils.rs
src/auth/: browser.rs  credentials.rs  microsoft.rs  mod.rs  token.rs
src/commands/: announcements.rs  announcements.ts  assignments.rs  assignments.ts  auth.rs  auth.ts  calendar.rs  calendar.ts  courses.rs  courses.ts  forums.rs  forums.ts  grades.rs  grades.ts  materials.rs  materials.ts  mod.rs  pages.rs  quizzes.rs  quizzes.ts  skills.rs  skills.ts  upload.rs  upload.ts  videos.rs  videos.ts
src/lib/: auth.ts  config.ts  logger.ts  moodle.ts  output.ts  session.ts  token.ts  types.ts  utils.ts
src/moodle/: assignment.rs  calendar.rs  client.rs  course.rs  forum.rs  grade.rs  material.rs  message.rs  mod.rs  page.rs  quiz.rs  seb.rs  types.rs  upload.rs  video.rs
