[package]
name = "openape"
version = "2.0.0"
edition = "2021"
description = "CLI tool for CYCU i-Learning platform"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
playwright-rs = "0.9"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
regex = "1"
comfy-table = "7.2.2"
