[package]
name = "openape"
version = "2.0.9"
edition = "2021"
description = "CLI tool for CYCU i-Learning platform"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "time"] }
reqwest = { version = "0.12", features = ["json", "cookies", "multipart", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chromiumoxide = { version = "0.7", default-features = false, features = ["tokio-runtime"] }
futures = "0.3"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
regex = "1"
comfy-table = "7.2.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
